# voyage-geo-agent

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install-skills.sh  llms.txt  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/commands/: geo-add-provider.md  geo-debug.md  geo-explore.md  geo-leaderboard.md  geo-report.md  geo-research.md  geo-run.md  geo-setup.md
.claude/skills/add-provider/: SKILL.md
.claude/skills/brand-research/: SKILL.md
.claude/skills/debug-run/: SKILL.md
.claude/skills/explore-results/: SKILL.md
.claude/skills/generate-report/: SKILL.md
.claude/skills/geo-add-provider/: SKILL.md
.claude/skills/geo-debug/: SKILL.md
.claude/skills/geo-explore/: SKILL.md
.claude/skills/geo-leaderboard/: SKILL.md
.claude/skills/geo-report/: SKILL.md
.claude/skills/geo-research/: SKILL.md
.claude/skills/geo-run/: SKILL.md
.claude/skills/geo-setup/: SKILL.md
.claude/skills/leaderboard/: SKILL.md
docs/: analyzers.md  providers.md  query-strategies.md
src/: cli.ts  index.ts
src/commands/: analyze.ts  config.ts  execute.ts  providers.ts  query.ts  report.ts  research.ts  run.ts
src/config/: defaults.ts  loader.ts  schema.ts
src/core/: context.ts  engine.ts  errors.ts  pipeline.ts
src/providers/: base.ts  registry.ts  types.ts
src/stages/: types.ts
src/storage/: filesystem.ts  result-store.ts  types.ts
src/types/: analysis.ts  brand.ts  query.ts  result.ts
src/utils/: logger.ts  progress.ts  text.ts
src/voyage_geo/: __init__.py  __main__.py  cli.py  trends.py  trends_dashboard.py
test/fixtures/: brand-profile.json  query-results.json
test/unit/: analyzers.test.ts  config.test.ts  context.test.ts  errors.test.ts  query-strategies.test.ts  statistics.test.ts  text.test.ts
tests/: test_analyzers.py  test_app_jobs.py  test_config.py  test_parse.py  test_storage_schema.py  test_text.py  test_trends.py  test_trends_dashboard.py  test_types.py
tests/fixtures/: brand_profile.json  query_results.json
voyage-geo-aeo-analysis/: SKILL.md
(+86 files in other folders)
